Closed Bug 1899318 Opened 2 years ago Closed 2 years ago

Fix at-property-animation to account for spec ambiguity.

Categories

(Core :: CSS Parsing and Computation, defect)

defect

Tracking

()

RESOLVED FIXED
128 Branch
Tracking Status
firefox128 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(1 file)

No description provided.

This fixes the color subtests of at-property-animation.html.

Whether a resolved color-mix(in srgb, currentColor, ...) should actually
return a modern or legacy color isn't super-clear, so allow both.

Attachment #9404345 - Attachment description: Bug 1899318 - Use resolved values for resolved colors in getComputedStyle. r=#style → Bug 1899318 - Fix at-property-animation to account for spec ambiguity. r=#style
Summary: Use resolved colors for registered custom properties in getComputedStyle → Fix at-property-animation to account for spec ambiguity.
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a869d0eda92c Fix at-property-animation to account for spec ambiguity. r=firefox-style-system-reviewers,zrhoffman
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/46532 for changes under testing/web-platform/tests
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch
Upstream PR merged by moz-wptsync-bot
No longer blocks: 1870370
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: